force-app/main/default/objects/Account/fields/FirstName_MP_Secondary__c.field-meta.xml
<CustomField>
    <fullName>FirstName_MP_Secondary__c</fullName>
    <label>FirstName MP Secondary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>