force-app/main/default/objects/Account/fields/LastName_MP_Primary__c.field-meta.xml
<CustomField>
    <fullName>LastName_MP_Primary__c</fullName>
    <label>LastName MP Primary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>