force-app/main/default/objects/Account/fields/LastName_MP_Secondary__c.field-meta.xml
<CustomField>
    <fullName>LastName_MP_Secondary__c</fullName>
    <label>LastName MP Secondary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>