force-app/main/default/objects/Account/fields/Matching_Employer__c.field-meta.xml
<CustomField>
    <fullName>Matching_Employer__c</fullName>
    <description>Lookup to the employer's Account record. Used by BenevityEmployerMatchingBatch to identify the employer for an individual donor and create a matching gift entry on their behalf. Configure the Employer ID Field Path in Benevity Matching Settings as: Donor.Matching_Employer__c</description>
    <label>Matching Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matched Employees</relationshipLabel>
    <relationshipName>Matched_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>